# soltradepy

./: .env  .env _example  .gitignore  LICENSE  README.md  dockerfile  main.py  pyproject.toml  pytest.ini
src/soltradepy/: __init__.py  main.py
src/soltradepy/application/: coin_info_job.py  coins_count_job.py  create_db.py  generate_proxies.py  moralis_job.py  updt_21w.py  updt_cf.py  updt_funding.py  updt_funding_amount.py  updt_uri.py  updt_usdc.py
src/soltradepy/domain/: __init__.py
src/soltradepy/domain/core/models/: wallet_entity.py
src/soltradepy/domain/moralis/models/: graduated_token_entity.py
src/soltradepy/domain/pumpfun/models/: coin_info_entity.py
src/soltradepy/infrastructure/: database.py
src/soltradepy/infrastructure/async_utils/: worker.py
src/soltradepy/infrastructure/browser/: cloudflare_bypass.py
src/soltradepy/infrastructure/config/: env.py
src/soltradepy/infrastructure/data_providers/: base_client.py  base_model.py  utils.py
src/soltradepy/infrastructure/data_providers/moralis/: moralis_client.py
src/soltradepy/infrastructure/data_providers/pumpfun/: pumpfun_client.py
src/soltradepy/infrastructure/http/: models.py  proxy.py  store.py  worker.py
src/soltradepy/infrastructure/repository/: base_repository.py
src/soltradepy/services/moralis/: graduated_tokens_service.py  moralis_service.py
src/soltradepy/services/pumpfun/: coin_info_service.py  pumpfun_service.py
src/soltradepy/storage/: cursor_state_store.py  graduated_tokens_store.py
src/soltradepy/storage/pumpfun/: coin_info_store.py  user_created_coins_store.py
tests/: conftest.py  test_graduated_store.py  test_moralis_integration.py
tests/infrastructure/browser/: test_cloudfare_by_pass.py
tests/infrastructure/data_providers/: test_moralis_client.py  test_pumpfun_client.py  test_rpc_client.py  test_solscan_client.py
tests/infrastructure/http/: test_proxy.py
tests/services/: test_moralis_service.py  test_pumpfun_service.py
tests/storage/: test_save_sql.py
tests/storage/moralis/: test_save_sql.py
tests/storage/pumpfun/: test_save_sql.py  test_user_created_coin_repo.py
(+10 files in other folders)
