[project]
name = "soltradepy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zilar", email = "" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
soltradepy = "soltradepy:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
